--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+.idea
+
 # C extensions
 *.so
 
@@ -50,6 +52,8 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
+
+.ipynb_checkpoints
 
 # Translations
 *.mo
